# CyberCraft

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  codecov.yml  makefile  shader.sh
Cyber-Engine/: CMakeLists.txt
Cyber-Engine/Game/: GameEngine  imgui.ini  run-game.sh
Cyber-Engine/Game/data/: .directory  sand.dds  stone.dds
Cyber-Engine/ext/include/: cmdline.h
Cyber-Engine/ext/include/glad/: glad.h
Cyber-Engine/ext/src/: glad.c
Cyber-Engine/include/: BasicScene.hpp  CubeData.hpp  Graphics.hpp  Math.hpp  PoolAllocator.hpp  Renderer.hpp  Scene.hpp  Timer.hpp  Window.hpp  World.hpp  debugAssert.hpp  filesystem.hpp
Cyber-Engine/include/BoxelScene/: BoxelCamera.hpp  BoxelPlayer.hpp  BoxelScene.hpp
Cyber-Engine/src/: BasicScene.cpp  Graphics.cpp  Renderer.cpp  Timer.cpp  Window.cpp  World.cpp  filesystem.cpp  main.cpp
Cyber-Engine/src/BoxelScene/: BoxelCamera.cpp  BoxelPlayer.cpp  BoxelScene.cpp
CyberCraft/defaultPlatform/: CMakeLists.txt
CyberCraft/defaultPlatform/PrivateInclude/: BgfxContext.h  DefaultPlatformImpl.h  SdlWindow.h
CyberCraft/defaultPlatform/PublicInclude/: DefaultPlatform.h
CyberCraft/defaultPlatform/src/: BgfxContext.cpp  DefaultPlatform.cpp  DefaultPlatformImpl.cpp  SdlWindow.cpp
CyberCraft/lib/: CMakeLists.txt
CyberCraft/lib/include/: CyberCraft.h  Event.h  Platform.h
CyberCraft/lib/src/: CyberCraft.cpp
CyberEngine/: CMakeLists.txt
CyberEngine/src/: BgfxFrame.cpp  BgfxFrame.h  Context.cpp  Context.h  Frame.cpp  Frame.h  Game.cpp  Game.h  GameLoader.cpp  GameLoader.h  MyBgfxContext.cpp  MyBgfxContext.h  MySdlWindow.cpp  MySdlWindow.h  Renderer2d.cpp  Renderer2d.h  ShaderManager.cpp  ShaderManager.h  ShaderManger.cpp  SystemState.cpp  SystemState.h  TextureManager.cpp  TextureManager.h  Utils.cpp  Utils.h  WindowSdl.cpp  WindowSdl.h  main.cpp
Lib/Core/: CMakeLists.txt
Lib/Core/include/Core/: Bases.h  Color.h  Common.h  Component.h  Debug.h  Engine.h  Game.h  Key.h  MainLoop.h  Math.h  Memory.h  Shader.h  Timer.hpp  TypeId.h  Update.h  Window.h  pointer.h
Lib/Core/src/Core/: Debug.cpp  Id.cpp  MainLoop.cpp  Memory.cpp  Range.cpp
Lib/Graphics/: CMakeLists.txt
Lib/Graphics/include/Graphics/: Graphics.h  impl_Graphics.h
Lib/Graphics/src/: BgfxAdapter.cpp  BgfxAdapter.h  BgfxAdapterPrivate.h  BimgAdapter.cpp  BimgAdapter.h  Enum.h  Graphics.cpp  SdlWindowAdapter.cpp  SdlWindowAdapter.h  TextureEnum.h  private_Graphics.h  private_graphics.cpp  private_impl_Graphics.h
Lib/Kernel/: CMakeLists.txt
Lib/Kernel/include/Kernel/: Engine.h  Engine2D.h  Game.h  GpuAdapter.h  GpuBuffer.h  GpuProgram.h  Graphics.h  GraphicsAdapter.h  Kernel.h  Key.h  MainLoop.h  Range.h  Renderer2d.h  ResourceManager.h  Shader.h  Texture.h  Tmp.h  Update.h  Window.h  typeName.h
Lib/Kernel/src/: Graphics.cpp  Kernel.cpp  MainLoop.cpp  Range.cpp  Renderer2d.cpp  Tmp.cpp  Update.cpp  pointer.cpp
Lib/Ports/: CMakeLists.txt
Lib/Ports/include/: Ports.h
Lib/Ports/include/Ports/: Enums.h  GpuAdapter.h  GpuBuffer.h  GpuProgram.h  GraphicsAdapter.h  Key.h  Texture.h  Window.h
Lib/Ports/src/: Ports.cpp
LibCyberCraft/: CMakeLists.txt
LibCyberCraft/include/: GameEngine.h
LibCyberCraft/include/Core/: BTreePlus.h  Color.h  Common.h  Id.h  Math.h  RenderContext.h  Scene.h  Update.h  Window.h
LibCyberCraft/include/ECS/: Basic.h  Iterator.h  Range.h  Scene.h
LibCyberCraft/src/: GameEngine.cpp
LibCyberCraft/src/Core/: Common.cpp  Id.cpp  MainLoop.cpp  Scene.cpp  Update.cpp  Window.cpp
LibCyberCraft/src/ECS/: Iterator.cpp  Range.cpp  Scene.cpp
LibCyberCraftCore/: CMakeLists.txt
LibCyberCraftCore/include/Core/: BTreePlus.h  Color.h  Common.h  Debug.h  Engine.h  Engine2D.h  Error.h  Game.h  Id.h  Key.h  MainLoop.h  Math.h  NonCopyable.h  PoolAllocator.hpp  Range.h  RenderContext.h  RenderContext2D.h  Signal.h  Texture.h  Timer.hpp  Update.h  Window.h  hash.h  pointer.h
LibCyberCraftCore/src/: Timer.cpp
LibCyberCraftCore/src/Core/: Common.cpp  Debug.cpp  Error.cpp  Id.cpp  MainLoop.cpp  Update.cpp  Window.cpp  pointer.cpp
LibCyberCraftSFML/: CMakeLists.txt
LibCyberCraftSFML/include/CyberCraftSFML/: RenderContextSFML.h  WindowSFML.h
LibCyberCraftSFML/src/: RenderContextSFML.cpp  WindowSFML.cpp  conversion.cpp  conversion.h
LibCyberCraftSystem/: CMakeLists.txt
LibCyberCraftSystem/include/System/: Common.h  DdsFile.h  Graphics.hpp  GraphicsData.h  Window.h  filesystem.hpp
LibCyberCraftSystem/src/: DdsFile.cpp  DdsFile.h  Graphics.cpp  Window.cpp  filesystem.cpp
Prototype/CyberBoxel/: CMakeLists.txt
Prototype/CyberBoxel/include/: Renderer.hpp  Scene.hpp
Prototype/CyberBoxel/include/BoxelScene/: BoxelCamera.hpp  BoxelScene.hpp
Prototype/CyberBoxel/src/: Renderer.cpp  main.cpp
Prototype/CyberCraftProto/: CMakeLists.txt
Prototype/CyberCraftProto/LibCyberCraftProto/: CMakeLists.txt
Prototype/CyberCraftProto/src/: main.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  CyberCraft.cpp  CyberCraft.h  Error.cpp  Error.h  Game.cpp  Game.h  Math.h  Player.cpp  Player.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  TileObject.cpp  TileObject.h  TileType.cpp  TileType.h  TileTypeRegistery.cpp  TileTypeRegistery.h  TileTypeRegistry.cpp  TileTypeRegistry.h  Window.h  aaa_main.cpp  main.cpp
src/BasicWorld/: Camera.cpp  Camera.h  Map.cpp  Map.h  Player.h
src/Core/: Common.h  Scene.cpp  Scene.h  Update.cpp  Update.h  Window.cpp
src/CyberCraftProto/: CyberCraft.cpp  CyberCraft.h  main.cpp
src/CyberCraftProto/Game/: Bloc.h  Common.h  Component.h  System.cpp  System.h  World.h
src/Game/: Bloc.cpp  Bloc.h  Common.h  Component.h  MyPlayer.cpp  MyPlayer.h  MyTileMap.cpp  MyTileMap.h  MyTileTypeRegistry.cpp  MyTileTypeRegistry.h  System.cpp  System.h  Tile.cpp  Tile.h  TileObject.cpp  TileObject.h  World.cpp  World.h
test/: CMakeLists.txt  Test_BTreePlus.cpp  Test_BimgAdapter.cpp  Test_RangeOfNumber.cpp  Test_TypeId.cpp  Test_component.cpp  Test_id.cpp  Test_math.cpp  Test_pointer.cpp  Test_typeName.cpp  catch_main.cpp  tests.cpp
test/src/: Test_BTreePlus.cpp  Test_Scene.cpp  main.cpp  test1.cpp
(+63 files in other folders)
